--- a/107598005/CourseManageSystem/CourseManageSystem.csproj
+++ b/107598005/CourseManageSystem/CourseManageSystem.csproj
@@ -47,10 +47,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controller.cs" />
-    <Compile Include="ControllerInterface.cs" />
-    <Compile Include="CourseData.cs" />
-    <Compile Include="CourseDataInterface.cs" />
+    <Compile Include="Controller\Controller.cs" />
+    <Compile Include="Dao\DaoInterface.cs" />
+    <Compile Include="Dao\XmlFileDao.cs" />
+    <Compile Include="Course.cs" />
+    <Compile Include="UseCases\CourseInput.cs" />
     <Compile Include="ManageSystem.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -59,7 +60,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="usecases\ControllerUseCases.cs" />
+    <Compile Include="UseCases\ControllerUseCases.cs" />
     <EmbeddedResource Include="ManageSystem.resx">
       <DependentUpon>ManageSystem.cs</DependentUpon>
     </EmbeddedResource>
