--- a/107598005/hw1/CourseManageSystem/CourseManageSystem.csproj
+++ b/107598005/hw1/CourseManageSystem/CourseManageSystem.csproj
@@ -49,8 +49,8 @@
   <ItemGroup>
     <Compile Include="Controller\Controller.cs" />
     <Compile Include="Dao\DaoInterface.cs" />
-    <Compile Include="Dao\XmlFileDao.cs" />
     <Compile Include="Course.cs" />
+    <Compile Include="Dao\XMLFileDao.cs" />
     <Compile Include="UseCases\CourseInput.cs" />
     <Compile Include="ManageSystem.cs">
       <SubType>Form</SubType>
