--- a/107598034/HW1/CoursesManagerSystem/.project
+++ b/107598034/HW1/CoursesManagerSystem/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>HW1</name>
+	<name>CoursesManagerSystem</name>
 	<comment></comment>
 	<projects>
 	</projects>
