--- a/107598032/hw2/classSystem/src/main/webapp/web.xml
+++ b/107598032/hw2/classSystem/src/main/webapp/web.xml
@@ -4,6 +4,6 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
     <welcome-file-list>
-        <welcome-file>Main</welcome-file>
+        <welcome-file>List</welcome-file>
     </welcome-file-list>
 </web-app>
